--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -13,12 +13,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Ceckout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         
-      - name: Publish to Docker Hub
-        uses: docker/build-push-action@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: mastermnb/icarus-dedicated-server
-          tags: latest, ${{ github.run_number }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+          
+      - name: Publish to Docker Hub
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: mastermnb/icarus-dedicated-server:latest, mastermnb/icarus-dedicated-server:${{ github.run_number }}
